--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,6 +1,6 @@
-title: processing-opacity
+title: Opacity
 hero_image: images/banner.png
-description: processing-opacity description
+description: opacity 
 version: 4
 listed: false
 copyedit: false
